tests/baselines/reference/parserES5ForOfStatement13(target=es2015).errors.txt
parserES5ForOfStatement13.ts(1,20): error TS2304: Cannot find name 'X'.


==== parserES5ForOfStatement13.ts (1 errors) ====
    for (let {a, b} of X) {
                       ~
!!! error TS2304: Cannot find name 'X'.
    }